feat: :sparkles: 新增业务示例，优化相关逻辑

--- a/packages/table/src/scss/theme.scss
+++ b/packages/table/src/scss/theme.scss
@@ -17,4 +17,9 @@ html.dark {
   --vxe-select-panel-background-color: #151518;
   --vxe-select-option-hover-background-color: #28282a;
   --vxe-loading-background-color: rgba(0, 0, 0, 0.2);
+  --vxe-toolbar-background-color: #151518;
+  --vxe-button-default-background-color: #151518;
+  --vxe-toolbar-custom-active-background-color: #151518;
+  --vxe-toolbar-panel-background-color: #151518;
+  --vxe-table-row-hover-background-color: #28282a;
 }
